# dev-utils

./: .pre-commit-config.yaml  Makefile  README.md  clean_browser_bookmarks.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_clean_browser_bookmarks.py
