[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-utils"
version = "0.1.0"
description = "Development utilities"
requires-python = ">=3.9"
authors = [{name = "Bowen Lee", email = "bowen0701@gmail.com"}]
dependencies = []

[tool.ruff]
line-length = 127
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
strict_optional = true
